--- a/res/layout/activity_main_menu.xml
+++ b/res/layout/activity_main_menu.xml
@@ -1,7 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/blue" >
+    
 
     <Button android:id="@+id/new_trip"
             android:layout_height="wrap_content"
@@ -21,4 +23,4 @@
             android:text="@string/previous_trips"
             android:onClick="previousTrips" />
 
-</RelativeLayout>
+</LinearLayout>
