--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="blue">#0099CC</color>
     <color name="light_blue">#A8DFF4</color>
+    <color name="gray">#999999</color>
 </resources>
