--- a/res/layout/activity_new_trip.xml
+++ b/res/layout/activity_new_trip.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
-    android:background="@color/blue" 
     android:padding="16dip">
     
    <TextView 	android:id="@+id/new_trip_title"
@@ -11,7 +10,7 @@
 	            android:layout_centerHorizontal="true"
 	            android:text="@string/new_trip_title"
 	            android:textSize="@dimen/font_medium"
-	            android:textColor="@color/light_blue" />
+	            android:textColor="@color/gray" />
     
     <EditText	android:id="@+id/text_box"
         		android:layout_width="wrap_content"
