--- a/res/layout/activity_journal_entry.xml
+++ b/res/layout/activity_journal_entry.xml
@@ -1,8 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+      <TextView 	
+        android:id="@+id/new_trip_title"
+		android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="@string/text_edit_title"
+        android:textSize="@dimen/font_medium"
+        android:textColor="@color/gray" />
+    
+    <EditText 
+        android:id="@+id/text_editor"
+        android:inputType="text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+    	     
+    	
+    ></EditText>
+    
+    
+    
+    
 
-</LinearLayout>
+</RelativeLayout>
