--- a/res/layout/activity_journal_entry.xml
+++ b/res/layout/activity_journal_entry.xml
@@ -3,28 +3,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-      <TextView 	
-        android:id="@+id/new_trip_title"
-		android:layout_width="match_parent"
+
+    <TextView
+        android:id="@+id/text_edit_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="@string/text_edit_title"
-        android:textSize="@dimen/font_medium"
-        android:textColor="@color/gray" />
-    
-    <EditText 
+        android:textColor="@color/gray"
+        android:textSize="@dimen/font_medium" />
+
+    <EditText
         android:id="@+id/text_editor"
-        android:inputType="text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/text_edit_title"
         android:layout_centerHorizontal="true"
-    	     
-    	
-    ></EditText>
-    
-    
-    
-    
+        android:layout_marginTop="32dp"
+        android:inputType="text" >
+    </EditText>
+
+    <Button
+        android:id="@+id/cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/text_editor"
+        android:text="@string/cancel"
+        android:onClick="gotoMap" />
+		
+    <Button
+        android:id="@+id/submit_changes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:text="@string/submit"
+        android:onClick="submitEdit" />
 
 </RelativeLayout>
