--- a/res/layout/activity_journal_entry.xml
+++ b/res/layout/activity_journal_entry.xml
@@ -15,12 +15,13 @@
 
     <EditText
         android:id="@+id/text_editor"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_edit_title"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
-        android:inputType="text" >
+        android:inputType="text"
+        android:scrollHorizontally="false" >
     </EditText>
 
     <Button
