--- a/res/layout/activity_add_point.xml
+++ b/res/layout/activity_add_point.xml
@@ -4,7 +4,9 @@
  	android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp" >
+    android:paddingRight="16dp" 
+    android:title="@string/add_point_menu_bar" >
+
     <EditText
         android:id="@+id/name"
         android:layout_width="fill_parent"
