--- a/res/layout/activity_journal_entry.xml
+++ b/res/layout/activity_journal_entry.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:title="@string/editor_menu_bar" >
 	
     <TextView
         android:id="@+id/note_title"
