--- a/res/layout/activity_mapview.xml
+++ b/res/layout/activity_mapview.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:title="@string/main_menu_menu_bar" >
 
     <com.google.android.maps.MapView
         android:id="@+id/mapview"
