--- a/res/layout/activity_new_trip.xml
+++ b/res/layout/activity_new_trip.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
-    android:padding="16dip">
+    android:padding="16dip"
+    android:title="@string/new_trip_menu_bar">
     
    <TextView 	android:id="@+id/new_trip_title"
 				android:layout_width="match_parent"
