tried to add pictures, not exactly working

--- a/res/layout/activity_add_point.xml
+++ b/res/layout/activity_add_point.xml
@@ -11,7 +11,8 @@
         android:id="@+id/name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/add_name" />
+        android:hint="@string/add_name" 
+        />
     
     <EditText
         android:id="@+id/notes"
@@ -19,9 +20,21 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/name"
         android:layout_alignParentLeft="true"
-        android:hint="@string/add_notes"
-         />
+        android:hint="@string/add_notes" 
+        />
  
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" 
+        />
+    
+    <VideoView
+        android:id="@+id/vidView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" 
+        />
+    
     <Button
         android:id="@+id/done"
         android:layout_width="96dp"
@@ -31,16 +44,22 @@
         android:text="@string/add_point"
         android:onClick="onAddClick" />
     
-    
-    <Button
-        android:id="@+id/launchCam"
+        <Button
+        android:id="@+id/btnPic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/notes"
         android:layout_toRightOf="@id/done"
         android:text="@string/take_picture"
-        
         />
     
+    <Button
+        android:id="@+id/btnVid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/notes"
+        android:layout_toRightOf="@id/btnPic"
+        android:text="@string/take_video"
+        />
 
 </RelativeLayout>
