--- a/res/layout/activity_journal_entry.xml
+++ b/res/layout/activity_journal_entry.xml
@@ -66,6 +66,18 @@
         android:inputType="text"
         android:scrollHorizontally="false" >
 
+   <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" 
+        />
+    
+    <VideoView
+        android:id="@+id/vidView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" 
+        />       
+         
         <requestFocus />
     </EditText>
 
