--- a/res/layout/activity_add_point.xml
+++ b/res/layout/activity_add_point.xml
@@ -1,52 +1,55 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
 
  	android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp" 
+    android:paddingRight="16dp"
+    android:orientation="vertical" 
     android:title="@string/add_point_menu_bar" >
 
     <EditText
         android:id="@+id/name"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/add_name" 
+        android:hint="@string/add_name"
+         
         />
     
     <EditText
         android:id="@+id/notes"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/name"
-        android:layout_alignParentLeft="true"
-        android:hint="@string/add_notes" 
+        android:hint="@string/add_notes"
+        
         />
  
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
+       	android:layout_height="0px"
+        android:layout_width="match_parent"
+        android:layout_weight="2"
         />
     
-    
-    <Button
-        android:id="@+id/done"
-        android:layout_width="96dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/notes"
-        android:layout_alignParentLeft="true"
-        android:text="@string/add_point"
-        android:onClick="onAddClick" />
+        android:orientation="horizontal"> 
+        
+   		<Button
+        	android:id="@+id/done"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/add_point"
+	        android:onClick="onAddClick" />
     
         <Button
-        android:id="@+id/btnPic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/notes"
-        android:layout_toRightOf="@id/done"
-        android:text="@string/take_picture"
-        />
+	        android:id="@+id/btnPic"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/take_picture"
+       		/>
+        </LinearLayout>>
     
 
-</RelativeLayout>
+</LinearLayout>
