--- a/res/layout/activity_journal_entry.xml
+++ b/res/layout/activity_journal_entry.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
@@ -15,42 +15,28 @@
         android:text=""
         />      
         
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="fill_parent"
+        android:layout_height="0px"
+        android:layout_weight="3" 
+        />    
+        
     <TextView
         android:id="@+id/notes"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/note_title"
-        android:layout_alignParentLeft="true"
+        android:layout_height="0px"
         android:layout_marginTop="32dp"
         android:textSize="@dimen/font_medium" 
         android:text=""
+        android:layout_weight="3"
         />
        
-    
-    <Button
-        android:id="@+id/submit_changes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:onClick="submitEdit"
-        android:text="@string/submit" />
-
-    <Button
-        android:id="@+id/delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/submit_changes"
-        android:onClick="deletePoint"
-        android:text="@string/delete" />
-
+   
     <TextView
         android:id="@+id/text_edit_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
         android:text="@string/text_edit_title"
         android:textColor="@color/gray"
         android:textSize="@dimen/font_medium" />
@@ -58,21 +44,28 @@
     <EditText
         android:id="@+id/text_editor"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/text_edit_title"
+        android:layout_height="0px"
         android:layout_marginTop="32dp"
+        android:layout_weight="3"
         android:ems="10"
         android:inputType="text"
-        android:scrollHorizontally="false" >
-        <requestFocus />
-    </EditText>
-    
-   <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
-        />    
-         
+        android:scrollHorizontally="false" />
+     <LinearLayout
+        	android:layout_height="wrap_content"
+        	android:layout_width="wrap_content"
+        	android:orientation="horizontal">
+    	<Button
+	        android:id="@+id/submit_changes"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:onClick="submitEdit"
+	        android:text="@string/submit" />
 
-</RelativeLayout>
+	    <Button
+	        android:id="@+id/delete"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"	        
+	        android:onClick="deletePoint"
+	        android:text="@string/delete" />
+	    </LinearLayout>
+</LinearLayout>
